# bina-compiler

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  projectv1.0.md  projectv2.0.md  while_cycle
examples/: columbina.bina  test1.bina  test2.bina  test3.bina  test_error.bina  test_impl.bina  test_precedence.bina  test_struct_lit.bina  while_cycle.bina
examples/fail/lexer/: bad_char.bina  bad_character.bina  invalid_binary_digit.bina  invalid_binary_empty.bina  invalid_escape.bina  invalid_exponent_empty.bina  invalid_exponent_sign_only.bina  invalid_float_suffix.bina  invalid_float_suffix_exponent.bina  invalid_hex_digit.bina  invalid_hex_empty.bina  invalid_hex_suffix.bina  invalid_int_suffix.bina  single_ampersand.bina  single_pipe.bina  unterminated_string.bina
examples/fail/parser/: bad_cast_syntax.bina  bad_function_decl.bina  bad_let_decl.bina  bad_struct_field.bina  chained_comparison.bina  impl_requires_functions.bina  missing_closing_brace.bina  missing_semicolon.bina  top_level_statement.bina
examples/fail/semantic/: alias_cycle.bina  ambiguous_overload.bina  ambiguous_same_distance.bina  array_equality_type_mismatch.bina  array_size_mismatch.bina  assert_requires_bool.bina  assert_wrong_arg_count.bina  assign_to_let.bina  assign_type_mismatch.bina  bad_main_params.bina  bad_main_return.bina  break_outside_loop.bina  builtin_wrong_args.bina  continue_outside_loop.bina  duplicate_function_signature.bina  duplicate_impl.bina  duplicate_local.bina  duplicate_symbol.bina  empty_array_without_expected_type.bina  function_as_value.bina  if_condition_not_bool.bina  impl_target_in_wrong_scope.bina  impl_unknown_struct.bina  impl_wrong_self_name.bina  impl_wrong_self_type.bina  index_not_integer.bina  int_literal_out_of_range_binary.bina  int_literal_out_of_range_hex.bina  int_literal_out_of_range_negative_binary.bina  invalid_cast.bina  local_use_before_declare.bina  method_call_on_non_struct.bina  method_unknown.bina  missing_main.bina  missing_return.bina  no_matching_overload.bina  op_eq_wrong_return.bina  op_method_missing.bina  op_method_private.bina  op_method_wrong_arity.bina  (+18 more)
examples/ok/: 00_minimal.bina  01_literals_and_types.bina  02_arithmetic_and_precedence.bina  03_variables_mutability_scope.bina  04_functions_and_overload.bina  05_control_flow.bina  06_arrays.bina  07_structs.bina  08_namespaces_and_aliases.bina  09_impl_methods.bina  10_builtins_and_strings.bina  11_input_and_void.bina  12_recursion.bina  99_integration.bina  array_equality.bina  assert_builtin.bina  bubble_sort.bina  char_type.bina  expression_evaluator.bina  float_exponent.bina  float_specials.bina  int_bases.bina  operator_overloading.bina  overload_promotion.bina  print_no_newline.bina  string_numeric_casts.bina  struct_equality.bina  visibility.bina
examples/runtime/: assert_fail.bina  bad_char_from.bina  bad_parse_int.bina  div_zero.bina  index_oob.bina  int_overflow.bina  overflow_parse.bina  panic_test.bina  signed_div_overflow.bina
inc/lexer/: lexer.hpp  token.hpp
inc/parser/: ast.hpp  parser.hpp
runtime/: bina_runtime.c
specs/: codegen.md  grammar.md  semantics.md  types.md
src/: main.cpp
src/codegen/: codegen.cpp  codegen.cppm
src/driver/: driver.cpp  driver.cppm
src/lexer/: lexer.cpp  lexer.cppm  token.cpp  token.cppm
src/parser/: ast.cpp  ast.cppm  parser.cpp  parser.cppm
src/semantic/: overload.cpp  overload.cppm  scope.cpp  scope.cppm  semantic.cpp  semantic.cppm  symbol.cppm  type.cpp  type.cppm
